Fix font and spacing

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     --Brown800: hsl(14, 45%, 36%);
     --Rose800: hsl(332, 51%, 32%);
     --Rose50: hsl(330, 100%, 98%);
+
     --Font-Size: 1rem;
     --Weight400: 400;
     --Weight600: 600;
@@ -24,7 +25,7 @@
 
 body {
     background-color: var(--Rose50);
-    min-height: 100svh;
+    min-height: 150svh;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -36,9 +37,23 @@ main {
     display: inline-block;
     margin-inline: auto;
     background-color: var(--White);
-    border: solid;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+main > * {
+    margin: .5rem;
 }
 
 .omel-img {
     height: 15rem;
+    border-radius: 1rem;
+}
+
+section, header {
+    width: 31rem;
+}
+
+h1,h2 {
+    font-family: "Young Serif";
 }
